--- a/water.html
+++ b/water.html
@@ -4,7 +4,6 @@
   <meta charset="UTF-8" />
   <title>Waypoint 1: Water - Unit 33321</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Courier+Prime:wght@400;700&family=Share+Tech+Mono&display=swap');
 
@@ -15,10 +14,8 @@
     body {
       margin: 0;
       font-family: 'Courier Prime', 'Courier New', monospace;
-
-      /* ✅ PURE WHITE PAGE */
       background: #ffffff;
-      color: #000000;
+      color: #d73a49;
       overflow: hidden;
       width: 100vw;
       height: 100vh;
@@ -30,37 +27,18 @@
       display: flex;
       align-items: center;
       justify-content: center;
-
-      /* ✅ SAME WHITE AS PAGE */
       background: #ffffff;
+      width: 100%;
+      height: 100%;
     }
 
     video {
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-
-      /* 🔥 SOFT DISSOLVE INTO PAGE */
-      background: transparent;
-
-      -webkit-mask-image: radial-gradient(
-        circle,
-        rgba(0,0,0,1) 60%,
-        rgba(0,0,0,0.85) 70%,
-        rgba(0,0,0,0.4) 80%,
-        rgba(0,0,0,0) 92%
-      );
-
-      mask-image: radial-gradient(
-        circle,
-        rgba(0,0,0,1) 60%,
-        rgba(0,0,0,0.85) 70%,
-        rgba(0,0,0,0.4) 80%,
-        rgba(0,0,0,0) 92%
-      );
+      max-width: 100%;
+      max-height: 100%;
+      width: auto;
+      height: auto;
+      display: block;
     }
-
-    /* UI OVERLAY */
 
     .overlay {
       position: fixed;
@@ -68,21 +46,14 @@
       left: 0;
       right: 0;
       padding: 2rem;
+      background: linear-gradient(180deg, rgba(255,255,255,0.95) 0%, rgba(255,255,255,0) 100%);
       z-index: 10;
-
-      /* subtle white gradient for readability */
-      background: linear-gradient(
-        180deg,
-        rgba(255,255,255,0.9) 0%,
-        rgba(255,255,255,0.4) 40%,
-        rgba(255,255,255,0) 100%
-      );
     }
 
     .waypoint-title {
       font-family: 'Share Tech Mono', monospace;
       font-size: 2rem;
-      color: #111111;
+      color: #005cc5;
       text-transform: uppercase;
       letter-spacing: 0.1em;
       margin: 0;
@@ -90,7 +61,7 @@
 
     .waypoint-subtitle {
       font-size: 1rem;
-      color: #555555;
+      color: #6f42c1;
       margin-top: 0.5rem;
     }
 
@@ -99,22 +70,21 @@
       bottom: 2rem;
       left: 2rem;
       padding: 0.75rem 1.5rem;
-
-      background: rgba(255,255,255,0.85);
-      border: 2px solid #111111;
-      color: #111111;
-
+      background: rgba(0, 92, 197, 0.1);
+      border: 2px solid #005cc5;
+      color: #005cc5;
       text-decoration: none;
       font-family: 'Share Tech Mono', monospace;
       text-transform: uppercase;
       letter-spacing: 0.1em;
       transition: all 0.2s ease;
       z-index: 10;
+      backdrop-filter: blur(10px);
     }
 
     .back-button:hover {
-      background: #111111;
-      color: #ffffff;
+      background: rgba(0, 92, 197, 0.2);
+      box-shadow: 0 0 15px rgba(0, 92, 197, 0.3);
       transform: translateX(-5px);
     }
 
@@ -123,10 +93,53 @@
       bottom: 2rem;
       right: 2rem;
       padding: 0.5rem 1rem;
-
-      background: rgba(255,255,255,0.85);
-      border: 1px solid #111111;
-      color: #111111;
-
+      background: rgba(255, 255, 255, 0.95);
+      border: 1px solid #005cc5;
+      color: #005cc5;
       font-size: 0.85rem;
       z-index: 10;
+      backdrop-filter: blur(10px);
+    }
+  </style>
+</head>
+<body>
+  <div class="video-container">
+    <!-- Your water.mov video -->
+    <video autoplay loop muted playsinline>
+      <source src="videos/water.mov" type="video/quicktime">
+      <source src="videos/water.mp4" type="video/mp4">
+      Your browser does not support the video tag.
+    </video>
+  </div>
+
+  <div class="overlay">
+    <h1 class="waypoint-title">WAYPOINT 1: WATER</h1>
+    <p class="waypoint-subtitle">Sensory Log - Unit 33321</p>
+  </div>
+
+  <a href="https://vioanl.github.io/digital-poetry-map/" class="back-button">← RETURN TO MAP</a>
+  
+  <div class="audio-status">AUDIO LOG PLAYING</div>
+
+  <!-- Auto-playing audio -->
+  <audio id="audio-player" autoplay>
+    <source src="audio/water.wav" type="audio/wav">
+    <source src="audio/water.mp3" type="audio/mpeg">
+  </audio>
+
+  <script>
+    const audio = document.getElementById('audio-player');
+    const status = document.querySelector('.audio-status');
+
+    // Update status when audio ends
+    audio.addEventListener('ended', () => {
+      status.textContent = 'AUDIO LOG COMPLETE';
+    });
+
+    // Handle audio errors
+    audio.addEventListener('error', () => {
+      status.textContent = 'AUDIO LOG ERROR';
+    });
+  </script>
+</body>
+</html>
