--- a/living.html
+++ b/living.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Memory 3: Life - Unit 33321</title>
+  <title>Waypoint 5: Life - Unit 33321</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Courier+Prime:wght@400;700&family=Share+Tech+Mono&display=swap');
@@ -14,10 +14,9 @@
     body {
       margin: 0;
       font-family: 'Courier Prime', 'Courier New', monospace;
-      /* PyCharm Dark Background */
-      background: ##ffffff; 
-      /* Standard Editor Text Color */
-      color: #a9b7c6; 
+      /* WHITE BACKGROUND (PyCharm Light Theme) */
+      background: #ffffff;
+      color: #333333;
       overflow: hidden;
       width: 100vw;
       height: 100vh;
@@ -29,8 +28,7 @@
       display: flex;
       align-items: center;
       justify-content: center;
-      /* Match background to body to avoid white flashes */
-      background: #2b2b2b; 
+      background: #ffffff;
       width: 100%;
       height: 100%;
     }
@@ -41,8 +39,6 @@
       width: auto;
       height: auto;
       display: block;
-      /* Optional: slight opacity to blend with the dark IDE theme if desired */
-      opacity: 0.9;
     }
 
     .overlay {
@@ -51,26 +47,25 @@
       left: 0;
       right: 0;
       padding: 2rem;
-      /* Gradient fading from Dark Grey to Transparent */
-      background: linear-gradient(180deg, rgba(43,43,43,0.98) 0%, rgba(43,43,43,0) 100%);
+      /* Gradient fading from White to Transparent */
+      background: linear-gradient(180deg, rgba(255,255,255,0.95) 0%, rgba(255,255,255,0) 100%);
       z-index: 10;
     }
 
-    .Memory-title {
+    .waypoint-title {
       font-family: 'Share Tech Mono', monospace;
       font-size: 2rem;
-      /* PyCharm Syntax Orange (Keywords) */
-      color: #cc7832; 
+      /* VIVID ORANGE (Readable on White) */
+      color: #d95e00;
       text-transform: uppercase;
       letter-spacing: 0.1em;
       margin: 0;
-      text-shadow: 0 0 10px rgba(204, 120, 50, 0.3);
     }
 
-    .Memory-subtitle {
+    .waypoint-subtitle {
       font-size: 1rem;
-      /* PyCharm String Green */
-      color: #6a8759; 
+      /* VIVID GREEN (Readable on White) */
+      color: #38761d;
       margin-top: 0.5rem;
     }
 
@@ -79,25 +74,23 @@
       bottom: 2rem;
       left: 2rem;
       padding: 0.75rem 1.5rem;
-      background: rgba(43, 43, 43, 0.8);
-      /* PyCharm Constant Purple */
-      border: 2px solid #9876aa; 
-      color: #9876aa;
+      background: rgba(103, 78, 167, 0.05);
+      /* VIVID PURPLE border */
+      border: 2px solid #674ea7;
+      /* VIVID PURPLE text */
+      color: #674ea7;
       text-decoration: none;
       font-family: 'Share Tech Mono', monospace;
       text-transform: uppercase;
       letter-spacing: 0.1em;
       transition: all 0.2s ease;
       z-index: 10;
-      backdrop-filter: blur(5px);
+      backdrop-filter: blur(10px);
     }
 
     .back-button:hover {
-      background: rgba(152, 118, 170, 0.1);
-      /* Hover changes to Variable Blue */
-      border-color: #6897bb;
-      color: #6897bb;
-      box-shadow: 0 0 15px rgba(104, 151, 187, 0.3);
+      background: rgba(103, 78, 167, 0.15);
+      box-shadow: 0 0 15px rgba(103, 78, 167, 0.3);
       transform: translateX(-5px);
     }
 
@@ -106,13 +99,12 @@
       bottom: 2rem;
       right: 2rem;
       padding: 0.5rem 1rem;
-      background: rgba(43, 43, 43, 0.9);
-      /* PyCharm Variable Blue */
-      border: 1px solid #6897bb; 
-      color: #6897bb;
+      background: rgba(255, 255, 255, 0.95);
+      border: 1px solid #d95e00;
+      color: #d95e00;
       font-size: 0.85rem;
       z-index: 10;
-      backdrop-filter: blur(5px);
+      backdrop-filter: blur(10px);
     }
   </style>
 </head>
@@ -125,8 +117,8 @@
   </div>
 
   <div class="overlay">
-    <h1 class="Memory-title">Memory 3: LIFE</h1>
-    <p class="Memory-subtitle">Sensory Log - Unit 33321</p>
+    <h1 class="waypoint-title">WAYPOINT 3: LIFE</h1>
+    <p class="waypoint-subtitle">Sensory Log - Unit 33321</p>
   </div>
 
   <a href="https://vioanl.github.io/digital-poetry-map/" class="back-button">← RETURN TO MAP</a>
@@ -144,14 +136,12 @@
 
     audio.addEventListener('ended', () => {
       status.textContent = 'AUDIO LOG COMPLETE';
-      status.style.borderColor = '#6a8759'; // Change to Green on complete
-      status.style.color = '#6a8759';
+      status.style.color = '#38761d'; // Turn Green on finish
+      status.style.borderColor = '#38761d';
     });
 
     audio.addEventListener('error', () => {
       status.textContent = 'AUDIO LOG ERROR';
-      status.style.borderColor = '#cc7832'; // Change to Orange on error
-      status.style.color = '#cc7832';
     });
   </script>
 </body>
