--- a/wind.html
+++ b/wind.html
@@ -64,6 +64,38 @@
       color: #cc7832;
       margin-top: 0.5rem;
     }
+    
+.mission-comment {
+  position: fixed;
+  top: 50%;
+  left: 2rem;
+  transform: translateY(-50%);
+  max-width: 280px;
+  padding: 1.5rem;
+  background: rgba(255, 255, 255, 0.92);
+  border-left: 3px solid #005cc5;
+  color: #333;
+  font-size: 0.85rem;
+  line-height: 1.7;
+  z-index: 10;
+  backdrop-filter: blur(10px);
+}
+
+.mission-comment-title {
+  font-family: 'Share Tech Mono', monospace;
+  color: #005cc5;
+  font-weight: bold;
+  margin-bottom: 0.75rem;
+  font-size: 0.8rem;
+  text-transform: uppercase;
+  letter-spacing: 0.05em;
+}
+
+.mission-comment p {
+  margin: 0;
+  color: #555;
+}
+
 
     .back-button {
       position: fixed;
@@ -118,6 +150,16 @@
   </div>
 
   <a href="https://vioanl.github.io/digital-poetry-map/" class="back-button">← RETURN TO MAP</a>
+    <div class="mission-comment">
+    <div class="mission-comment-title">Mission Log Entry 001</div>
+    <p>Mission Log Entry 002
+Timestamp: 10:17:45 UTC | Location: Grid Sector 3-C | System Status: NOMINAL
+Atmospheric pressure differential detected. Barometric reading: 1013.25 hPa dropping to 1009.8 hPa. Delta P: 3.45 hPa over 4.2 minutes. Invisible force. Cannot be held, only felt. Pressure sensors register movement without visual confirmation. Compass deviation: ±2.3°. Accelerometer detects lateral force: 0.4 N.
+Logic circuits struggle with paradox: how to record what cannot be seen? Air composition analysis: 78% N₂, 21% O₂, 0.04% CO₂, trace elements. Molecular mass: 28.97 g/mol. But composition does not explain movement. Air molecules in motion. Vector calculation: northwest, 287° bearing.
+Wind pushes without hands. Wind speaks without voice. Anemometer readings: 12 m/s average, gusting to 18 m/s. Beaufort scale: Force 6 (strong breeze). Temperature drop detected: -3.1°C in 8 minutes. But measurements cannot capture the language wind carries, sodium chloride particles (sea salt), water vapor, the molecular signature of distant rain (probability: 73% within 2 hours).
+Wind touches everything it passes. Surface area contacted: estimated 2,847 m² per minute. Wind leaves no trace. Infrared signature: none. Visual confirmation: impossible.
+First lesson in absence.</p>
+  </div>
   
   <div class="audio-status">AUDIO LOG PLAYING</div>
 
