--- a/wind.html
+++ b/wind.html
@@ -153,11 +153,18 @@
     <div class="mission-comment">
     <div class="mission-comment-title">Mission Log Entry 001</div>
     <p>Mission Log Entry 002
-Timestamp: 10:17:45 UTC | Location: Grid Sector 3-C | System Status: NOMINAL
-Atmospheric pressure differential detected. Barometric reading: 1013.25 hPa dropping to 1009.8 hPa. Delta P: 3.45 hPa over 4.2 minutes. Invisible force. Cannot be held, only felt. Pressure sensors register movement without visual confirmation. Compass deviation: ±2.3°. Accelerometer detects lateral force: 0.4 N.
-Logic circuits struggle with paradox: how to record what cannot be seen? Air composition analysis: 78% N₂, 21% O₂, 0.04% CO₂, trace elements. Molecular mass: 28.97 g/mol. But composition does not explain movement. Air molecules in motion. Vector calculation: northwest, 287° bearing.
-Wind pushes without hands. Wind speaks without voice. Anemometer readings: 12 m/s average, gusting to 18 m/s. Beaufort scale: Force 6 (strong breeze). Temperature drop detected: -3.1°C in 8 minutes. But measurements cannot capture the language wind carries, sodium chloride particles (sea salt), water vapor, the molecular signature of distant rain (probability: 73% within 2 hours).
-Wind touches everything it passes. Surface area contacted: estimated 2,847 m² per minute. Wind leaves no trace. Infrared signature: none. Visual confirmation: impossible.
+Timestamp: 10:17:45 UTC | Location: Grid Sector 3-C |Atmospheric pressure differential detected. <br><br>
+      Barometric reading: 1013.25 hPa dropping to 1009.8 hPa.<br><br>
+      Invisible force. Cannot be held, only felt. <br><br>
+      Pressure sensors register movement without visual confirmation.<br><br>
+Logic circuits struggle with paradox: how to record what cannot be seen? <br><br>
+  Air composition analysis: 78% N₂, 21% O₂, 0.04% CO₂, trace elements. Molecular mass: 28.97 g/mol. <br><br>
+    Composition does not explain movement. <br><br>
+Wind pushes and speaks. <br><br> 
+But measurements cannot capture the message wind carries <br><br>
+      sodium chloride particles (sea salt), water vapor, the molecular signature of distant rain (probability: 73% within 2 hours).
+Surface area contacted: estimated 2,847 m² per minute. Wind leaves no trace. Infrared signature: none. 
+       <br><br>Visual confirmation: impossible.  <br><br>
 First lesson in absence.</p>
   </div>
   
