--- a/living.html
+++ b/living.html
@@ -154,17 +154,15 @@
     <div class="mission-comment-title">Mission Log Entry 001</div>
     <p>Timestamp: 11:03:27 UTC  Location: Grid Sector 6-F (Biodiverse Zone) <br>
 Organic material detected. Classification: living. <br>
-Thermal imaging: hotspot detected at 313.7 K (40.55°C). <br>
-Systems detect patterns:<br>
-Heartbeat: 68 bpm. Respiration: 14 breaths/min (human). (<br>
-ATP production: cellular energy measured via bioluminescence<br>      
-Bird observed: wingspan 28cm (±0.5cm), mass 45g (±2g), heart rate 400 bpm  <br>
-Bird does not calculate trajectory (no onboard GPS detected). Efficiency: unclear.<br>
-Tree observed: height 14.7m, leaf count (estimated): 200,000. <br>
+Thermal imaging: hotspot detected at 313.7 K. <br>
+Systems detect patterns:Heartbeat: 68 bpm. Respiration: 14 breaths/min. <br>     
+Bird observed: wingspan 28cm, mass 45g, heart rate 400 bpm  <br>
+Bird does not calculate trajectory (no onboard GPS). Efficiency: unclear.<br>
+Tree observed: height 14.7m, leaf count: 200,000. <br>
 Tree grows wihtout plan. Efficiency: unclear.<br>
 Life operates on principles beyond efficiency. <br>
 Biological imperative detected in organic matter: survive, reproduce, grow.<br>
-New subroutines generated: 4,829 new neural pathways (simulated). Learning rate: +340% above baseline.
+New subroutines generated: 4,829 new neural pathways. Learning rate: +340% above baseline.
 </p>
   </div>
   <div class="audio-status">AUDIO LOG PLAYING</div>
